k8s-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
    - name: goserver-service
      port: 80
      targetPort: 8000
      protocol: TCP
